# self-improving-agentic-systems

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/policies/: arith_dpo_policy.json  sql_dpo_policy.json
config/: default.yaml
data/sql/: tasks.json
docs/: ESCALATE_DESIGN.md  EXTENSIONS_DESIGN.md  POSITIONING.md  RESEARCH_STATE.md
examples/: embed_policy.py
scripts/: analyze_eval.py  estimate_grpo.py  eval_ab.py  fixed_baselines.py  make_figures.py  make_sql_dataset.py  run_grpo_probe.py  run_selfimprove.py  serve_policy.py  smoke_live.py
src/wdp/: __init__.py  cli.py  config.py
src/wdp/allocator/: __init__.py  bc.py  dpo.py  grpo.py  kto.py  linear.py  linucb.py  persist.py  policy.py
src/wdp/benchmarks/: __init__.py  arithmetic.py  base.py  sql.py
src/wdp/cost/: __init__.py  accounting.py
src/wdp/executor/: __init__.py  react.py
src/wdp/grpo/: __init__.py  estimate.py
src/wdp/llm/: __init__.py  cache.py  openrouter.py
src/wdp/loop/: __init__.py  grpo_train.py  improve.py  runner.py  trace.py
src/wdp/metrics/: __init__.py  agent_metrics.py
src/wdp/planner/: __init__.py  decompose.py
src/wdp/verifier/: __init__.py  scorer.py
tests/: test_baselines.py  test_cache.py  test_grpo.py  test_learners.py  test_measurement.py  test_persist.py  test_selfimprove.py  test_smoke.py  test_sql.py
