[project]
name = "wdp-controller"
version = "0.1.0"
description = "Wider, Deeper, or Decompose? A self-improving controller for cost-optimal agent compute (Stanford CS329A)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.urls]
Repository = "https://github.com/kalyvask/self-improving-agentic-systems"

[project.scripts]
wdp-decide = "wdp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
# The arithmetic task generator deliberately packs each construction rule onto one
# line as `n = ...; lines.append(...); val ...` — splitting these 3x would triple the
# generator's length for no readability gain. E702 (multiple-statements) is waived here only.
"src/wdp/benchmarks/arithmetic.py" = ["E702"]
